Requests title should be Trips in flights feed

--- a/app/views/flights/_flights_feed.html.erb
+++ b/app/views/flights/_flights_feed.html.erb
@@ -9,7 +9,7 @@
         <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
         <header>
           <center>
-            <h2>Requests</h2>
+            <h2>Trips</h2>
             <% if @flights.present? %>            
             <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
             <% else %>
