--- a/app/views/flights/_flights_feed.html.erb
+++ b/app/views/flights/_flights_feed.html.erb
@@ -5,23 +5,6 @@
       <!-- Three -->
 
 
-      <section id="intro">
-        <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
-        <header>
-          <center>
-            <h2>Trips</h2>
-            <% if @flights.present? %>            
-            <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
-            <% else %>
-            <br>
-            <br>
-            <h3>Sorry! No Trips To Show You At The Moment! Try Adding More Friends</h3>
-            <% end %>
-          </center>
-        </header>
-      </section>
-
-
       <section id="" class="flight_details">
         <% @flights.each do |flight| %>
 
@@ -31,7 +14,7 @@
               <p class="icon fa-home">From: <%= flight.departure %></p>
               <h3 class="icon fa-plane">To: <%= flight.destination %> </h3>
               <div class="4u$ 12u$(small)">
-                <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}", class:"map" %>
+                <%= image_tag "http://maps.google.com/maps/api/staticmap?size=400x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}", class:"map" %>
               </div> 
             </div>
             <div class="meta">
@@ -50,8 +33,15 @@
             </header>
             <footer>
               <ul class="actions">
+                <% if flight.user != current_user %>
                 <p><%= flight.content %></p> 
                 <li><%= button_to "Contact #{flight.user.first_name}", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: flight.user.id} %></li>
+                <% else %>
+                <li>
+                  <%= button_to 'Edit',edit_flight_path(flight),  method: :get, class: "button icon fa-envelope" %>
+                </li>
+                <% end %>
+              </ul>
               </ul>
               <ul class="stats">
                 <!-- <li><a href="#">General</a></li> -->
