add mail system

--- a/app/views/new_message_mailer/new_message.text.erb
+++ b/app/views/new_message_mailer/new_message.text.erb
@@ -1,3 +1,4 @@
-NewMessageMailer#new_message
+<%= " #{@sender.first_name.capitalize} says:"%>
 
-<%= @greeting %>, find me in app/views/app/views/new_message_mailer/new_message.text.erb
+
+<%= @content %>
