--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -14,7 +14,7 @@
         <% else %>
         <br>
         <br>
-        <h3>Sorry! No Requests To Show You At The Moment! Try Adding More Friends or Adding A New Request</h3>
+        <h3>Sorry! No Requests To Show You At The Moment! <br>Try Adding More Friends or Adding A New Request</h3>
         <% end %>
       </center>
     </header>
