--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -12,7 +12,7 @@
         <% else %>
         <br>
         <br>
-        <h3>Sorry! No Trips To Show You At The Moment! Try Adding More Friends</h3>
+        <h3>Sorry! No Trips To Show You At The Moment! <br>Try Adding More Friends or Adding A New Trip</h3>
         <% end %>
       </center>
     </header>
