add email + filters

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <meta content='<%= user_signed_in? ? current_user.id : "" %>' name='user-id'/>
 
-  <title>Im' In</title>
+  <title>Apostell</title>
   <%= stylesheet_link_tag "landing_page" %>
   <%= javascript_include_tag 'landing_page' %>
   <%= javascript_include_tag 'chat' %>
