--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,4 +1,6 @@
-<ul class="posts">      
+<%= print "here" %>
+<% if @users.present? %> 
+<ul class="posts">     
       <% @users.each do |user| %>
       <!-- Posts List -->
       <li>
@@ -31,4 +33,15 @@
       </li>
       <% end %>
     </ul>
+    <% else %>
+
+  <section id="intro">
+    <header>
+      <center>
+        <h3>No results found for "<%= @search %>"  <br>Try Modifying your search.</h3>
+      </center>
+    </header>
+
+  </section>
+    <% end %>
 <!-- -->
