--- a/app/views/new_message_mailer/new_message.html.erb
+++ b/app/views/new_message_mailer/new_message.html.erb
@@ -194,7 +194,7 @@
                               -->
                               <table border="0" cellpadding="0" cellspacing="0" width="500">
                                 <tr>
-                                  <td align="right" class="textContent">
+                                  <td align="center" class="textContent">
                                     <img src="http://www.apostell.com/assets/logo-c99ea12a90864cd228a5907fc7319e46.png" width="150" class="flexibleImage" style="border-radius:100%;max-width:100%;padding:6px;" alt="Text" title="Text" />
                                 
                                   </td>
