--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -20,10 +20,40 @@
       </center>
     </header>
     <% end %>
+
+    <% elsif !@search.present?%>
+    <header>
+      <center>
+        <h2>Requests</h2>     
+
+    <header class="filter_field">
+      <center>
+        <%= form_tag requests_path, :method => 'get' do %>
+        <%= text_field_tag :search, params[:search], id: 'requests_search',placeholder: "What city are you looking for?" %><br>
+        <%= submit_tag "Search", :name => nil %>
+
+      </center>
+    </header>
+        <% end %>
+        <br>
+        <br>
+        <h3>Sorry! No Trips Found. Try Adding More Friends or Adding A New Trip </h3>    
+      </center>
+    </header>
     <% else %>
     <header>
       <center>
         <h2>Requests</h2>  
+
+    <header class="filter_field">
+      <center>
+        <%= form_tag requests_path, :method => 'get' do %>
+        <%= text_field_tag :search, params[:search], id: 'requests_search',placeholder: "What city are you looking for?" %><br>
+        <%= submit_tag "Search", :name => nil %>
+
+      </center>
+    </header>
+    <% end %>
         <br>
         <br>
         <h3>Sorry! No Requests Found for "<%= @search %>"! <br>Try Adding More Friends or Adding A New Request</h3>
