--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,47 +1,56 @@
 <%= print "here" %>
 <% if @users.present? %> 
 <ul class="posts">     
-      <% @users.each do |user| %>
-      <!-- Posts List -->
-      <li>
-        <article>
-          <header>
-            <h3>
-              <a href="#">
-                <%= user.full_name %>
-              </a>
-            </h3>
-            <p>
-              <%= user.entity_name.capitalize %>
-            </p>
-              <%= button_to "Message", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: user.id} %>
-                
-            <% if current_user.friend?(user) %>
-            <p>
-            <%= button_to "Unfriend", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
-          </p>
-          <% elsif current_user.followed_by?(user) and !current_user.following?(user) %>
-            <%= button_to "Accept Friend Request", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
-          <% elsif current_user.following?(user) and !current_user.followed_by?(user) %>
-            <%= button_to "Your Request Is Pending", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
-          <% else current_user.following?(user) and !current_user.followed_by?(user) %>
-            <%= button_to "Connect", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
-          <% end %>
-          </header>
-          <a href="#" class="image"><%=image_tag(user.avatar) %></a>
-        </article>
-      </li>
-      <% end %>
-    </ul>
-    <% else %>
+  <% @users.each do |user| %>
+  <!-- Posts List -->
+  <li>
+    <article>
+      <header>
+        <h3>
+          <a href="#">
+            <%= user.full_name %>
+          </a>
+        </h3>
+        <p>
+          <%= user.entity_name.capitalize %>
+        </p>
+        <%= button_to "Message", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: user.id} %>
 
+        <% if current_user.friend?(user) %>
+        <p>
+          <%= button_to "Unfriend", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+        </p>
+        <% elsif current_user.followed_by?(user) and !current_user.following?(user) %>
+        <%= button_to "Accept Friend Request", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+        <% elsif current_user.following?(user) and !current_user.followed_by?(user) %>
+        <%= button_to "Your Request Is Pending", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+        <% else current_user.following?(user) and !current_user.followed_by?(user) %>
+        <%= button_to "Connect", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+        <% end %>
+      </header>
+      <a href="#" class="image"><%=image_tag(user.avatar) %></a>
+    </article>
+  </li>
+  <% end %>
+</ul>
+<% elsif @search && @search.present? && !@users.present? %>
+<section id="intro">
+  <header>
+    <center>
+      <h3>No results found for "<%= @search %>"  <br>Try Modifying your search.</h3>
+    </center>
+  </header>
+</section>
+  <% else %>
   <section id="intro">
     <header>
       <center>
-        <h3>No results found for "<%= @search %>"  <br>Try Modifying your search.</h3>
+        <h3>No Friends To Display.
+          <br><br>
+          Add Friends By Using The Search Bar.
+        </h3>
       </center>
     </header>
-
-  </section>
     <% end %>
+  </section>
 <!-- -->
