add friend requests email

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -37,7 +37,8 @@
         <% end %>
         <br>
         <br>
-        <h3>Sorry! No Trips Found. Try Adding More Friends or Adding A New Trip </h3>    
+        <h3>Oops! No Requests To Show You.<br><br>
+        Try Adding More Friends or Adding A New Request </h3>     
       </center>
     </header>
     <% else %>
