--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -37,7 +37,8 @@
         <% end %>
         <br>
         <br>
-        <h3>Sorry! No Trips Found. Try Adding More Friends or Adding A New Trip </h3>    
+        <h3>Oops! No Trips To Show You.<br><br>
+        Try Adding More Friends or Adding A New Trip </h3>    
       </center>
     </header>
 
