make html changes

--- a/app/views/flights/created_index.html.erb
+++ b/app/views/flights/created_index.html.erb
@@ -9,7 +9,7 @@
             <% else %>
             <br>
             <br>
-            <h3>You do not currently have any upcoming trips. <br>Create one and it'll show up below
+            <h3>Create A Flight and it'll show up below
             </h3>
             <% end %>
             <br>
