--- a/app/views/requests/created_index.html.erb
+++ b/app/views/requests/created_index.html.erb
@@ -5,11 +5,11 @@
           <center>
             <h2>My Requests</h2>
             <% if @requests.present? %>            
-            <p>Your personal upcoming Requests</p>
+            <p>Below is a list of all your pending requests</p>
             <% else %>
             <br>
             <br>
-            <h3>You do not currently have any upcoming requests. <br>Create one and it'll show up below
+            <h3>Create A Request and it'll show up below
             </h3>
             <% end %>
             <br>
