--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -35,10 +35,10 @@
       <%= f.label :who_can_see_this_flight_? %><br />
       <%= f.select (:public),options_for_select([["Only my friends", "0"], ["Anyone", "1"]]),required: true %>
     </div>    
-    <div class="field 12u 12u$(small)">
+<!--     <div class="field 12u 12u$(small)">
       <%= f.label :add_an_image %><br />
       <%= f.file_field :picture, :autofocus => true %>
-    </div><br>
+    </div><br> -->
     <div class="actions">
       <%= f.submit %>
     </div>
