--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,8 +24,8 @@
     <%= link_to "Invite Facebook Friends",
     "http://www.facebook.com/dialog/send?
     app_id=1051690404882304
-    &link=https://www.apostell.com
-    &redirect_uri=https://facebook.com",
+    &link=http://www.apostell.com
+    &redirect_uri=http://facebook.com",
     target: '_blank',
     class:"button big" %>
 
