fix accept request failure

--- a/app/views/connections_mailer/accept_friend_request.html.erb
+++ b/app/views/connections_mailer/accept_friend_request.html.erb
@@ -246,12 +246,12 @@
                                         <div style="text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:15px;margin-bottom:0;color:#5F5F5F;line-height:135%;">
       
                                             <br>
-                                            Hi <%= @recipient.first_name.capitalize!%>,<br><br>
+                                            Hi <%= @recipient.first_name.capitalize %>,<br><br>
 
                                             Your're now connected to 
                                             <%= @sender.full_name %> on Apostell !<br><br>
 
-                                            You'll now access have to any flights or requests that they create.<br>
+                                            You'll now have access to any flights or requests that they create.<br>
 
                                         </div>
                                       </td>
