remove invite link FB

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,13 +21,13 @@
     <%= submit_tag "Search", :name => nil %>
     <br><br>
 
-    <%= link_to "Invite Facebook Friends",
+<!--     <%= link_to "Invite Facebook Friends",
     "http://www.facebook.com/dialog/send?
     app_id=1051690404882304
     &link=www.apostell.com
     &redirect_uri=https://facebook.com",
     target: '_blank',
-    class:"button big" %>
+    class:"button big" %> -->
 
 <% end %>
     </center>
