--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,19 +7,36 @@
 
 <!-- Sidebar -->
 
-  <!-- Intro -->
-  <section id="intro">
+<!-- Intro -->
+<section id="intro">
 
-    <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
-    <header>
-      <center>
-      <h2>Community</h2>
-      <p>Find Friends</p>
+  <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
+  <header>
+    <center>
+      <h2>Friends</h2>
 
-    <%= form_tag users_path, :method => 'get' do %>
-    <%= text_field_tag :search, params[:search], id: 'users_search',placeholder: "Search Friends by first name, last name or email" %><br>
-    <%= submit_tag "Search", :name => nil %>
-    <br><br>
+      <% if current_page?(users_path) %>
+      <p> Your Current Friends</p>
+        <%= link_to "Go To Friend Requests", users_find_path %><br><br>
+
+      <%= form_tag users_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search], id: 'users_search',placeholder: "Search Friends by first name, last name or email" %><br>
+      <%= submit_tag "Search", :name => nil %>
+      <br><br>
+      <% end %>
+
+      <% else %>
+
+      <p>Your Pending Requests</p>
+        <%= link_to "Go To Current Friends", users_path %><br><br>
+
+      <%= form_tag users_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search], id: 'users_search',placeholder: "Search Friends by first name, last name or email" %><br>
+      <%= submit_tag "Search", :name => nil %>
+      <br><br>
+      <% end %>
+
+      <% end %>
 
 <!--     <%= link_to "Invite Facebook Friends",
     "http://www.facebook.com/dialog/send?
@@ -29,12 +46,11 @@
     target: '_blank',
     class:"button big" %> -->
 
-<% end %>
-    </center>
-    </header>
-  </section>
-  <section id="users">
-    <%= render "users" %>
-  </section>
+  </center>
+</header>
+</section>
+<section id="users">
+  <%= render "users" %>
+</section>
 
-  <% end %>
+<% end %>
