--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,17 @@
   <title>Apostell</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
       <%= stylesheet_link_tag 'font-awesome' %>
+      <%= javascript_include_tag 'application'%>
       <%= javascript_include_tag 'jquery'%>
+      <%= javascript_include_tag 'main'%>
       <%= javascript_include_tag 'skel'%>
       <%= javascript_include_tag 'util'%>
-      <%= javascript_include_tag 'main'%>
+      <%= javascript_include_tag 'jquery.scrollex.min'%>
+      <%= javascript_include_tag 'jquery.scrolly.min'%>
+      <%= javascript_include_tag 'respond.min'%>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
 </script><!-- only if you need custom infoboxes -->
-
 
   <%= csrf_meta_tags %>
 
@@ -27,29 +30,27 @@
 </head>
 
 <% if not user_signed_in? and current_page?(root_url) %>
-<%= stylesheet_link_tag "landing_page" %>
-<%= javascript_include_tag 'landing_page' %>
+<%= stylesheet_link_tag "landing_page2" %>
+<%= javascript_include_tag 'landing_page2' %>
 
-<body class="landing_page is-loading" id="body_paris2">
 
-  <!-- Wrapper -->
-  <div id="wrapper">
+  <body class="landing">
 
-    <!-- Main -->
-    <section id="main">
-      <header>
-        <h3>One Community.<h3>
-          <h3>One Million Shipping Destinations. </h3>
-          <span class="avatar"><%= image_tag("logo.png") %></span>
-          <!-- 
-          <h1 class="name">Jane Doe</h1>
-          <p class="program">Senior Psychonautics Engineer</p> -->
-        </header>
+    <!-- Page Wrapper -->
+      <div id="page-wrapper">
+          <header id="header" class="alt">
+            <h1><a href="index.html">Apostell</a></h1>
+          </header>
 
-        <hr />
+        <!-- Banner -->
+          <section id="banner">
+            <div class="inner">
+              <h2>APOSTELL</h2>
+              <p>One Community.
+              One Million Shipping Destinations.<br />
 
         <ul class="actions">
-          <li class="button icon fa-facebook"><%= link_to "Use Your Facebook Details", user_omniauth_authorize_path(:facebook) %></li>
+          <li><%= button_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook" %></li>
         </ul>
 <!-- 
         <ul class="actions">
@@ -60,31 +61,72 @@
           <li><a href="/users/sign_up" class="button">Sign Me Up!</a></li>
         </ul> -->
 
-      </section>
+          </div>
+            <a href="#one" class="more scrolly">How It Works</a>
+          </section>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="copyright">
-          <li>&copy; Apostell</li>
-          <!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-        </ul>
-      </footer>
+        <!-- One -->
+         <section id="one" class="wrapper style1 special">
+            <div class="inner">
+                <h2>How It Works</h2>
+            </div>
+          </section>
+ 
+        <!-- Two -->
+          <section id="one" class="wrapper alt style2">
+            <section class="spotlight">
+              <div class="image"><%= image_tag("ship.jpeg") %></div>
+              <div class="content">
+                <h2>Shipping Something?</h2>
+                <p>Need to send something across the globe but want to avoid high shipping fees?<br>
+                  Want to ship something to a destination where shipping is non-existent?</p>
+              </div>
+            </section>
+            <section class="spotlight">
+              <div class="image"><%= image_tag("friends.jpeg") %></div><div class="content">
+                <h2>Find travelling friends</h2>
+                <p>Friends, or friends of friends are constantly travelling and maybe even some probably heading your way.</p>
+              </div>
+            </section>
+            <section class="spotlight">
+              <div class="image"><%= image_tag("contact.jpeg") %></div><div class="content">
+                <h2>Connect</h2>
+                <p>Get in touch with them and make arrangements to get your package delivered to where it needs to be.</p>
+              </div>
+            </section>
+          </section>
 
-    </div>
+        <!-- CTA -->
+          <section id="cta" class="wrapper style4">
+            <div class="inner">
+              <header>
+                <h2>Sounds Interesting?</h2>
+                <p>With us, there's no sign up hassle needed. We use your pre-existing Facebook credentials.</p>
+              </header>
+              <ul class="actions vertical">
+                <li><a href="#" class="button special">Login With Facebook</a></li>
+              </ul>
+            </div>
+          </section>
 
-    <!-- Scripts -->
-    <!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-    <script>
-    if ('addEventListener' in window) {
-      window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-      document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-    }
-    </script>
+        <!-- Footer -->
+          <footer id="footer">
+            <ul class="icons">
+              <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+              <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            </ul>
+            <ul class="copyright">
+              <li>&copy; Apostell</li>
+            </ul>
+          </footer>
+
+      </div>
+
 
   </body>
   <% elsif not user_signed_in? %>
-  <%= stylesheet_link_tag "landing_page" %>
-  <%= javascript_include_tag 'landing_page' %>
+  <%= stylesheet_link_tag "landing_page2" %>
+  <%= javascript_include_tag 'landing_page2' %>
   <%= yield %>
 
   <% else %>
