--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,9 +38,8 @@
 
       <!-- Banner -->
         <section id="banner">
-          <h2>Apostell</h2>
-          <p>One Community<br>
-          One Million Shipping Destinations</p>
+          <h1 class="title">Welcome To Apostell</h1>
+          <p>One Community. One Million Shipping Destinations.</p>
           <ul class="actions">
             <li><%= button_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook" %></li>
             <li><a href="#main" class="button">Learn More</a></li>
@@ -66,7 +65,7 @@
               </section>
               <section>
                 <span class="icon major fa-search accent3"></span>
-                <h3>Find travelling friends</h3>
+                <h3>Find Travelling Friends</h3>
                 <p>Friends or, friends of friends are constantly travelling and probably even heading to the destination you need to send your package to.</p>
               </section>
             </div>
@@ -78,8 +77,8 @@
               </section>
               <section>
                 <span class="icon major fa-plane accent5"></span>
-                <h3>...You Can Also Make Requests</h3>
-                <p>Apostell also allows you to post requests for others to help you out if they happen to be heading to, or leaving from the location you'd like your item to be delivered to, or picked up from. </p>
+                <h3>Post Your Trips</h3>
+                <p>Return the favor. Let your friends know when you’re travelling, and be the one helping them get their package to where it needs to be. </p>
               </section>
             </div>
           </section>
