--- a/app/assets/stylesheets/landing_page2.css
+++ b/app/assets/stylesheets/landing_page2.css
@@ -3058,14 +3058,13 @@
 		#banner p {
 			font-size: 1.25em;
 			margin-bottom: 1.75em;
-			text-shadow: 1px 2px grey;
 		}
 
 		#banner input[type="submit"],
 		#banner input[type="reset"],
 		#banner input[type="button"],
 		#banner .button {
-			background-color: transparent;
+			background-color: rgba(0, 0, 0, 0.1);
 			box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5);
 			color: #fff;
 			min-width: 12em;
