--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
       <!-- Banner -->
         <section id="banner">
-          <h1 class="title">Welcome To Apostell</h1>
+          <h1 class="title">APOSTELL</h1>
           <p>One Community. One Million Shipping Destinations.</p>
           <ul class="actions">
             <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook" %></li>
